# componentpouch

./: .gitignore  COMMANDS.md  LICENSE  README.md  README.txt  install.sh  pyproject.toml  setup.sh
.github/workflows/: optimize_code.yml  pylint.yml
VSCode/: extensions.json
componentpouch/: __main__.py  repo.py  tools.py
