[tool.poetry]
name = "componentpouch"
version = "0.1.0"
description = "CLI tool for setting up a workspace"
authors = ["Gianfranco Demarco <gianfrademarco@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
typer = { version = "^0.7.0", extras = ["all"] }
typer-cli = "^0.0.13"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]