[tool.poetry]
name = "componentpouch"
version = "1.0.0"
description = "CLI tool for setting up a workspace"
authors = ["Gianfranco Demarco <gianfrademarco@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.7.0"}
typer-cli = "^0.0.13"

[tool.poetry.scripts]
componentpouch = "componentpouch.__main__:app"